# rtic_lcd_app

./: Cargo.toml  Embed.toml
.cargo/: config.toml
scripts/: recv_server.py  send_server.py
src/: main.rs
